[package]
name = "tshell"
version = "0.2.1"
authors = ["auseckas <andrew@threatx.io>", "Stu Small <stuart.small@threat-x.com>"]
description = "TShell, a command tree framework with autocompletion and contextual help"
readme = "README.md"
keywords = ["tshell"]
documentation = "https://github.com/auseckas/tshell"
repository = "https://github.com/auseckas/tshell"
license = "MIT"

[dependencies]
env_logger = "^0.3"
log = "^0.3"
#rustyline = { git="https://github.com/kkawakam/rustyline" }
rustyline = "^1.0.0"
